k8s-config.d/goserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver-deployment
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
        - name: goserver
          image: sharran/goserverdemo
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
#Internal Service configuration
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
