k8s-config.d/goserver_deployment_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver-deployment
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
        - name: goserver
          image: sharran/goserverdemo
          resources:
            limits:
              memory: "250Mi"
              cpu: "125m"
          ports:
            - containerPort: 80
---
#Service configuration
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
