k8s-config.d/goserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goserver-ingress
  labels:
    name: goserver-ingress
spec:
  rules:
    - host:  
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: goserver-service
                port:
                  number: 80
